created user_list function
